--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,16 @@
-/* Style de base */
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    background-color: white;
     margin: 0;
     padding: 0;
 }
 
-/* Header */
 header {
     display: flex;
     justify-content: space-between;
-    align-items: flex-start; /* Alignement des éléments en haut */
+    align-items: flex-start; 
     padding: 20px;
-    background-color: #4CAF50;
+    background-color: white;
 }
 
 .header-left {
@@ -27,67 +25,63 @@ header {
     border-radius: 50%;
 }
 
-/* Titre principal */
 h1 {
     margin: 0;
-    color: white;
+    color: rgb(37, 37, 37);
     font-size: 24px;
 }
 
-/* Section des filtres */
 .filters-section {
     padding: 20px;
-    background-color: #e0e0e0;
+    background-color: white;
 }
 
 h2 {
     margin: 0 0 10px 0;
-    color: #333;
+    color: rgb(90, 89, 89);
     font-size: 20px;
 }
 
-/* Filtres */
 .filters {
     margin-top: 10px;
     display: flex;
-    flex-wrap: wrap; /* Pour gérer l'affichage sur mobile */
+    flex-wrap: wrap; 
 }
 
 .filter-btn {
     margin: 5px;
     padding: 10px 20px;
-    background-color: #fff;
-    border: 1px solid #ddd;
+    background-color: white;
+    border: 1px solid #c2c2c2;
     cursor: pointer;
+    border-radius: 8px;
     transition: background-color 0.3s ease;
 }
 
-/* Filtre sélectionné */
 .filter-btn.active {
-    background-color: #4CAF50;
-    color: white;
+    background-color: #d8d8d8;
+    color: #000000;
 }
 
 .filter-btn:hover {
-    background-color: #ddd;
+    background-color: #d8d8d8;
 }
 
-/* Style des cartes */
 #cards-container {
     display: flex;
     justify-content: space-around;
     margin: 20px;
-    flex-wrap: wrap; /* Ajout pour gérer l'affichage responsive */
+    flex-wrap: wrap; 
 }
 
 .card {
     background-color: white;
-    padding: 20px;
+    padding: 40px;
     width: 250px;
     border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     text-align: center;
-    display: none; /* Par défaut les cartes sont cachées */
+    border: 1px solid #c2c2c2;
+    display: none; 
     margin-bottom: 20px;
 }
 
@@ -95,20 +89,35 @@ h2 {
     margin-top: 0;
 }
 
-.download-btn, .competences-btn {
+.download-btn {
     margin-top: 10px;
     padding: 10px;
-    background-color: #4CAF50;
+    background-color: black;
+    border-radius: 8px;
     color: white;
+    border: none;
+    cursor: pointer;
+    margin: 5px;
+}
+
+.competences-btn {
+    margin-top: 10px;
+    padding: 10px;
+    background-color: #d8d8d8;
+    border-radius: 8px;
+    color: black;
     border: none;
     cursor: pointer;
 }
 
 .download-btn:hover, .competences-btn:hover {
-    background-color: #45a049;
+    opacity: 0.8;
 }
 
-/* Style de la popup */
+.competences-btn:hover {
+    background-color: #d8d8d8 ;
+}
+
 .popup {
     display: none;
     position: fixed;
@@ -116,24 +125,33 @@ h2 {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.788);
     justify-content: center;
     align-items: center;
 }
 
 .popup-content {
+    position: relative;  
     background-color: white;
     padding: 20px;
-    width: 400px;
+    width: 1000px;
+    height: 500px;
     border-radius: 8px;
 }
 
 .close-btn {
     position: absolute;
-    top: 10px;
+    top: 5px;
     right: 10px;
     font-size: 24px;
+    color: rgb(90, 89, 89);
     cursor: pointer;
+    background: none;
+    border: none;
+}
+
+.close-btn:hover {
+    opacity: 0.8;  
 }
 
 ul {
@@ -145,9 +163,6 @@ ul li {
     padding: 5px 0;
 }
 
-/* ------------------ Responsive ------------------ */
-
-/* Tablette (>= 768px) */
 @media (max-width: 768px) {
     header {
         flex-direction: column;
@@ -187,7 +202,6 @@ ul li {
     }
 }
 
-/* Mobile (<= 480px) */
 @media (max-width: 480px) {
     header {
         align-items: center;
