--- a/styles.css
+++ b/styles.css
@@ -120,6 +120,13 @@ h2 {
     background-color: #d8d8d8 ;
 }
 
+.diplome-icon {
+    width: 20px; 
+    height: auto;
+    margin-right: 8px; 
+    vertical-align: middle; 
+}
+
 .popup {
     display: none;
     position: fixed;
@@ -165,64 +172,6 @@ ul li {
     padding: 5px 0;
 }
 
-
-/* Footer */
-footer {
-    background-color: #333;
-    color: #fff;
-    padding: 20px 10px;
-    font-size: 14px;
-}
-
-.footer-container {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    max-width: 1200px;
-    margin: 0 auto;
-    gap: 20px;
-}
-
-.footer-section {
-    flex: 1;
-    min-width: 200px;
-}
-
-.footer-section h3 {
-    margin-bottom: 10px;
-    font-size: 16px;
-    color: #f4f4f4;
-}
-
-.footer-section p,
-.footer-section ul,
-.footer-section li {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-.footer-section a {
-    color: #4CAF50;
-    text-decoration: none;
-}
-
-.footer-section a:hover {
-    text-decoration: underline;
-}
-
-.footer-bottom {
-    text-align: center;
-    margin-top: 20px;
-    border-top: 1px solid #444;
-    padding-top: 10px;
-    font-size: 12px;
-}
-
-.footer-bottom p {
-    margin: 0;
-    color: #ccc;
-}
 
 
 
@@ -281,16 +230,6 @@ footer {
         width: 90%;
         height: auto; 
     }
-
-    .footer-container {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-    }
-
-    .footer-section {
-        margin-bottom: 20px;
-    }
 }
 
 /* Mobile (max-width: 480px) */
@@ -312,7 +251,6 @@ footer {
         font-size: 16px;
     }
 
-    /* Section des filtres */
     .filters {
         flex-direction: column;
         align-items: center;
