--- a/styles.css
+++ b/styles.css
@@ -20,9 +20,10 @@ header {
 }
 
 #header-image {
-    width: 50px;
+    width: 80px;
     height: auto;
-    border-radius: 50%;
+    border-radius: 60%;
+    margin-right: 20px;
 }
 
 h1 {
