--- a/styles.css
+++ b/styles.css
@@ -147,6 +147,8 @@ h2 {
     width: 1000px;
     height: 500px;
     border-radius: 8px;
+    overflow-y: auto; 
+    max-height: 100%;
 }
 
 .close-btn {
