--- a/styles.css
+++ b/styles.css
@@ -306,10 +306,11 @@ ul li {
     }
 
     .card {
-        width: 100%;
+        width: 80%;
         padding: 0px;
         margin: 10px auto;
         text-align: center;
+        padding: 20px; 
     }
 
     .popup-content {
